--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "lucide-react": "^0.344.0",
+    "next": "^15.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
