--- a/package.json
+++ b/package.json
@@ -2,22 +2,24 @@
     "name": "email-generator",
     "version": "1.0.0",
     "scripts": {
-      "dev": "vite",
-      "build": "vite build",
-      "start": "vite preview"
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start"
     },
     "dependencies": {
-      "@tailwindcss/aspect-ratio": "^0.4.2",
-      "@vitejs/plugin-react": "^4.3.3",
-      "lucide-react": "^0.453.0",
-      "react": "^18.3.1",
-      "react-dom": "^18.3.1"
+        "@tailwindcss/aspect-ratio": "^0.4.2",
+        "lucide-react": "^0.453.0",
+        "next": "^15.0.1",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1"
     },
     "devDependencies": {
-      "autoprefixer": "^10.4.20",
-      "postcss": "^8.4.47",
-      "tailwindcss": "^3.4.14",
-      "vite": "^4.0.0"
+        "@types/node": "22.7.9",
+        "@types/react": "18.3.12",
+        "autoprefixer": "^10.4.20",
+        "eslint": "^9.13.0",
+        "postcss": "^8.4.47",
+        "tailwindcss": "^3.4.14",
+        "typescript": "5.6.3"
     }
-  }
-  
+}
