--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "devDependencies": {
         "@types/node": "22.7.9",
         "@types/react": "18.3.12",
+        "@types/react-dom": "^18.3.1",
         "autoprefixer": "^10.4.20",
         "eslint": "^9.13.0",
         "postcss": "^8.4.47",
